--- a/style.css
+++ b/style.css
@@ -1,118 +1,159 @@
 * {
-margin:0 ;
-padding:0 ;
-box-sizing: border-box;
-font-family: sans-serif, 'Poopins';
-
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 10%;
-    background: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100%;
 
+.header {
+    background-color: black;
+    height: 654px;
+    overflow: hidden;
 }
-.logo{
-    font-size: 30px;
-    color: navy;
+
+.navbar ul li {
+    float: left;
+    margin: 50px 80px 70px 100px;
+    font-size: 20px;
+    list-style: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.navbar ul li a {
     text-decoration: none;
-    font-weight: 700;
+    color: aliceblue;
+    border-radius: 25px;
+}
 
+.navbar ul li a:hover {
+    color: darkorange;
+    border-bottom: 5px solid darkorange;
+    transition: ease-in 0.2s;
 }
-.navbar a{
-    font-size: 18px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 35px;
-    
 
-}
-.navbar a:hover,
-.navbar a.active {
-    color: rgb(236, 12, 12);
-}
-.home {
-    height: 100vh;
-    background: linear-gradient(-90deg,#002574 65%, #fff 35%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-.home-image{
-    width: 500px;
-    height: 500px;
-    background: seagreen;
-
-}
-.home-content{
-    max-width: 600px;
-    color: #fff;
+.left-text {
     text-align: left;
-    justify-content: left;
+    position: absolute;
+    top: 40%;
+    margin-left: 120px;
+    font-size: 50px;
+    color: white;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+.img {
+    margin-left: 66%;
+}
 
+.img img {
+    height: 400px;
+    margin-left: 5px;
+    margin-top: 11px;
+    width: 100px;
+}
+
+.hello-text {
+    color: darkorange;
+}
+
+.webd {
+    border-bottom: 4px solid darkorange;
+    padding-bottom: 20px;
+}
+
+.name {
+    animation-name: name_animation;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes name_animation {
+    from {
+        color: red;
+    }
+    to {
+        color: darkorange;
+    }
+}
+.footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+}
+
+.social-icons li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.social-icons li a {
+    color: #fff;
+    font-size: 20px;
+}
+
+.social-icons li a:hover {
+    color: #ffd700; /* Change color on hover */
+}
+
+.footer p {
+    margin-top: 10px;
+    font-size: 14px;
+}
+.section{
+    padding: 3rem 0;
+
+}
+section.projects{
+    height: 600px;
+    background-color: aliceblue;
+    text-align: center;
 }
 .heading{
-    font-size: 35px;
-    line-height: 1.2;
-    align-items: left;
-    align-content: right;
-}
-.home-content h3{
-     font-size: 40px;
-     color: aqua;
-     -webkit-text-stroke: .6px #fff;
-
-     .home-sci {
-        margin: 25px 0 40px;
-
-     }
-}
-.home-sci a{
-    display: inline-flex;
-    justify-content: centre;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 20px solid #efeff7;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #00abf0;
-    text-decoration: none;
-    margin-left: 12px;
-    transition: .5s;
-}
-.home-sci a:hover{
-    background: #00abf0;
-    color: #f01818;
-    border-color: #00abf0;
-    box-shadow: 0 0 10px #00abf0;
-
+    text-align: center;
+    font-size: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    animation-name: heading-animation;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 
 }
+@keyframes heading-animation{
+    25%{}
+    50%{color: red;}
+    75%{color: darkorange;}
 
-.btn{
-    padding: 12px 35px;
-    background: #00abf0;
-    border-radius: 40px;
-    font-size: 17px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    letter-spacing: 1px;
-    box-shadow: 0 0 10px #00abf0;
-    transition: .5s;
 }
-.btn:hover{
-    box-shadow: none;
+.project-image {
+    margin: 20px 0;
+}
 
+.projects img {
+    width: 29%;
+    height: 250px;
+    margin-top: 3%;
+    box-shadow: 10px 10px 8px 10px grey;
+    margin-left: 44px;
+    border: 8px solid orange;
+    transition: transform 0.3s ease; /* Adding transition for smoother scaling */
+}
+
+.projects img:hover {
+    transform: scale(1.09);
+    animation-name: border-animation;
+    animation-duration: 0.9s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes border-animation {
+    0% { border: 8px solid orange; } /* Initial state */
+    25% { border-bottom: 8px solid darkorange; }
+    50% { border-right: 8px solid darkorange; }
+    75% { border-top: 8px solid darkorange; }
+    100% { border-left: 8px solid darkorange; }
 }
